--- a/package.json
+++ b/package.json
@@ -32,5 +32,7 @@
     "mocha": "^2.4.5",
     "spawn-pouchdb-server": "^3.3.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "uid": "0.0.2"
+  }
 }
