--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/dottgonzo/couchobject#readme",
   "devDependencies": {
-    "bluebird": "^3.3.5",
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-bump": "^2.1.0",
@@ -29,8 +28,7 @@
     "gulp-tag-version": "^1.3.0",
     "gulp-typescript": "^2.13.0",
     "gulp-util": "^3.0.7",
-    "mocha": "^2.4.5",
-    "spawn-pouchdb-server": "^3.3.1"
+    "mocha": "^2.4.5"
   },
   "dependencies": {
     "uid": "0.0.2"
